tests/ui/suggestions/issue-89640.rs
fn main() {
    le t x: i32 = 3; //~ ERROR expected one of
}
